--- a/Taskquest.html
+++ b/Taskquest.html
@@ -31,12 +31,19 @@
     <!-- ---------- MAIN CONTENT ---------- -->
     <div class="main-content">
       <!-- Toolbar -->
-      <div class="toolbar">
-        <div class="toolbar-actions">
-          <button class="toolbar-button" id="exportBtn">Export</button>
-          <button class="toolbar-button" id="clearBtn">Clear Data</button>
-        </div>
-      </div>
+      <!-- Toolbar -->
+<div class="toolbar">
+  <div class="toolbar-actions">
+    <button class="toolbar-button" id="exportBtn">Export</button>
+    <button class="toolbar-button" id="clearBtn">Clear Data</button>
+  </div>
+
+  <!-- Gamification Display -->
+  <div class="gamification-status">
+    <div id="xpDisplay">XP: 0</div>
+    <div id="badgeDisplay" class="badge-display"></div>
+  </div>
+</div>
 
       <!-- Tasks Page -->
       <div class="page active" id="tasksPage">
