--- a/Taskquest.html
+++ b/Taskquest.html
@@ -10,7 +10,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
 
 
@@ -101,7 +101,7 @@
     </div>
 
     <!-- Floating Action Button -->
-    <div class="fab" id="fab">+</div>
+    <div class="fab"><span class="material-icons">add</span></div>
 
     <!-- Item Modal -->
     <div class="modal-overlay" id="itemModal">
